--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -107,7 +107,8 @@
 						<!-- Fin columnas -->
 					</div>
 
-					<hr />
+						<hr />
+
 
 				</div>
 			</div>
@@ -261,6 +262,13 @@
 										<td>{{ rezagadoCosto != null ? (rezagadoCosto | number:'1.2-2') : '-' }}</td>
 										<td class="text-center">
 											<button type="button" class="btn btn-sm btn-success" (click)="openRezagadoModal()"><i class="bi bi-plus"></i></button>
+										</td>
+									</tr>
+									<tr *ngIf="reincorporacion?.debe_reincorporacion && reincorporacionCosto && reincorporacionCosto > 0">
+										<td>Reincorporación</td>
+										<td>{{ reincorporacionCosto | number:'1.2-2' }}</td>
+										<td class="text-center">
+											<button type="button" class="btn btn-sm btn-success" (click)="openReincorporacionModal()"><i class="bi bi-plus"></i></button>
 										</td>
 									</tr>
 									<tr>
